fix: address johns new design

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,4 +25,6 @@
   --color-gray3: #D8E2EB;
   --color-orange: #EE5B00;
   --color-cloud-grey: #ECF0F5;
+  --color-mist-blue: #DCE9FF;
+  --color-dark-blue: #1D2E39;
 }
